--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Jiabin Tang"
-  avatar           : "images/tjb_2.jpg"
+  avatar           : "images/tjb_2.jpeg"
   bio              : "The University of Hong Kong (HKU)"
   location         : "Hong Kong, China"
   employer         :
