Update personal and research information in the homepage and about page. Changed description to reflect current status as a third-year Ph.D. student and co-founder of Novix. Updated research interests to focus on Language Models and Language Agents.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Jiabin Tang' Homepage"
-description              : "Jiabin Tang is a first-year Ph.D. student, whose research interests lie in Graph Neural Networks, Large Language Models and deep learning applications. "
+description              : "Co-founder of Novix.science.\nEx-Research Intern of Monnshot.ai and Baidu Inc.\nThird-year Ph.D. student at The University of Hong Kong.\nBuilding agents for AGI"
 repository               : "tjb-tech/tjb-tech.github.io"
 google_scholar_stats_use_cdn : true
 
