Refine personal and research details in homepage and about page. Updated description to emphasize current role as a Ph.D. candidate and co-founder of Novix. Enhanced research interests section with additional projects and achievements.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Jiabin Tang' Homepage"
-description              : "Co-founder of Novix.science.\nEx-Research Intern of Monnshot.ai and Baidu Inc.\nThird-year Ph.D. student at The University of Hong Kong.\nBuilding agents for AGI"
+description              : "Co-founder of Novix.science and Ph.D. candidate at The University of Hong Kong. Ex-Research Intern of Monnshot.ai and Baidu Inc."
 repository               : "tjb-tech/tjb-tech.github.io"
 google_scholar_stats_use_cdn : true
 
